Test/typing/should_fail/method_call_wrong_arguments.java
class A {
    private int myMethod() {
        return i+1;
    }

    public void main(String[] args) {
        int result = myMethod(10);
    }
}
